# monitor-switch

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  cbindgen.toml
.github/workflows/: build.yml  release-please.yml
apps/linux/: Cargo.toml  build.rs
apps/linux/resources/: input_row.ui  resources.gresource.xml  window.ui
apps/linux/src/: application.rs  autostart.rs  input_row.rs  main.rs  preferences.rs  window.rs
apps/macos/: AppIcon.icns  Info.plist  Package.swift  build-app.sh
apps/macos/Sources/CMonitorCore/: module.modulemap
apps/macos/Sources/MonitorSwitch/: AppDelegate.swift  InputSource.swift  LoginItemManager.swift  MonitorCore.swift  MonitorMenu.swift  MonitorSwitchApp.swift  PreferencesView.swift  PreferencesWindow.swift
src/: config.rs  ffi.rs  input_source.rs  lib.rs  monitor.rs
