[package]
name = "monitor-core"
version = "0.2.0"
edition = "2021"

[lib]
name = "monitor_core"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
ddc-hi = "0.4"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6"

[target.'cfg(target_os = "macos")'.dependencies]
ddc-macos = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
ddc-i2c = { version = "0.2", features = ["with-linux", "with-linux-enumerate"] }

[build-dependencies]
cbindgen = "0.28"

