[package]
name = "monitor-switch"
version = "0.2.2"
edition = "2021"

[[bin]]
name = "monitor-switch"
path = "src/main.rs"

[dependencies]
monitor-core = { path = "../.." }
gtk4 = { version = "0.11", features = ["v4_12"] }
libadwaita = { version = "0.7", features = ["v1_4"] }
dirs = "6"

[build-dependencies]
glib-build-tools = "0.20"

